--- a/oversightclient/src/components/Header/Header.css
+++ b/oversightclient/src/components/Header/Header.css
@@ -1,7 +1,15 @@
 .navbar {
-background-color: #003D5B
+    background-color: #003d5b;
+   
+}
+.brand-logo {
+    font-family: 'Arial Rounded MT Bold','Nunito', sans-serif;
+    font-weight: bold;
+    font-size: 45px;
+    color: #00798c
 }
 .logo {
-    height: 40px;
-    margin: 10px
+    max-height: 50px;
+    margin-left: 10px;
+    margin-top: 2%
 }
