landing mods for Paola insights. GET error fixed

--- a/oversightclient/src/components/LandingPage/LandingPage.css
+++ b/oversightclient/src/components/LandingPage/LandingPage.css
@@ -1,11 +1,18 @@
 .banner-logo {
-    max-height: 120px;
+    max-height: 100px;
+}
+.banner-screenshot{
+    max-height: 400px;
+    margin-top: 20px
+}
+.banner-info{
+    height: 400px;
 }
 .banner-text {
     color: white;
     font-weight: bold;
     margin:0;
-    margin-bottom: 20px;
+    margin-bottom: 20px
 }
 .caracteristics-container {
     background-color: #F9F9FA;
