--- a/oversightclient/src/components/LandingPage/LandingPage.css
+++ b/oversightclient/src/components/LandingPage/LandingPage.css
@@ -2,8 +2,8 @@
     max-height: 100px;
 }
 .banner-screenshot{
-    max-height: 400px;
-    margin-top: 20px
+    max-height: 500px;
+    margin-top: 20px;
 }
 .banner-info{
     height: 400px;
@@ -11,8 +11,10 @@
 .banner-text {
     color: white;
     font-weight: bold;
+    font-size: 110%;
     margin:0;
-    margin-bottom: 20px
+    margin-bottom: 20px;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 .caracteristics-container {
     background-color: #F9F9FA;
